--- a/applications/ums/build.gradle
+++ b/applications/ums/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.3.0.M5'
+        springBootVersion = '1.4.2.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -31,7 +31,7 @@ repositories {
 
 dependencies {
     compile(project(":components/subscriptions"))
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-jdbc")
+    compile("org.springframework.boot:spring-boot-starter-web:1.4.2.RELEASE")
+    compile("org.springframework.boot:spring-boot-starter-jdbc:1.4.2.RELEASE")
     compile("com.h2database:h2")
 }
