--- a/components/billing/build.gradle
+++ b/components/billing/build.gradle
@@ -1,3 +1,8 @@
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile(project(":components/payments"))
+    compile('org.springframework.boot:spring-boot-starter-web:1.4.2.RELEASE')
 }
