--- a/applications/ums/src/main/resources/application.yml
+++ b/applications/ums/src/main/resources/application.yml
@@ -1,4 +1,10 @@
 server:
   port: 8080
 
-billingEndpoint: http://localhost:8081
+spring:
+  application:
+    name: ums
+
+security:
+  basic:
+    enabled: false
