circuit breaker complete

--- a/applications/billing/build.gradle
+++ b/applications/billing/build.gradle
@@ -33,4 +33,5 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
   compile("io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+  compile("io.pivotal.spring.cloud:spring-cloud-services-starter-circuit-breaker")
 }
