--- a/applications/ums/build.gradle
+++ b/applications/ums/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry")
     compile("com.h2database:h2")
+    compile("io.pivotal.spring.cloud:spring-cloud-services-starter-circuit-breaker")
 }
