--- a/components/billing/build.gradle
+++ b/components/billing/build.gradle
@@ -5,4 +5,5 @@ repositories {
 dependencies {
     compile(project(":components/payments"))
     compile('org.springframework.boot:spring-boot-starter-web:1.4.2.RELEASE')
+    compile('com.netflix.hystrix:hystrix-javanica:1.5.6')
 }
