--- a/applications/billing/build.gradle
+++ b/applications/billing/build.gradle
@@ -34,4 +34,5 @@ dependencies {
   compile("io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
   compile("io.pivotal.spring.cloud:spring-cloud-services-starter-circuit-breaker")
+  compile("org.springframework.cloud:spring-cloud-starter-config")
 }
